--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@prisma/client": "^5.16.2",
     "@supabase/supabase-js": "^2.44.3",
+    "@types/recoil": "^0.0.9",
+    "chart.js": "^4.4.3",
     "next": "14.2.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
